--- a/fontes/Comercial/lib/nblibraries.properties
+++ b/fontes/Comercial/lib/nblibraries.properties
@@ -3,12 +3,19 @@ libs.CopyLibs.classpath=\
 libs.CopyLibs.displayName=Tarefa CopyLibs
 libs.CopyLibs.prop-version=2.0
 libs.eclipselink.classpath=\
-    ${base}/eclipselink/eclipselink.jar:\
-    ${base}/eclipselink/javax.persistence_2.1.0.v201304241213.jar:\
-    ${base}/eclipselink/org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar
+    ${base}/eclipselink/eclipselink.jar;\
+    ${base}/eclipselink/javax.persistence_2.1.0.v201304241213.jar;\
+    ${base}/eclipselink/eclipselink.jar;\
+    ${base}/eclipselink/javax.persistence_2.1.0.v201304241213.jar;\
+    ${base}/eclipselink/org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar
 libs.eclipselink.displayName=EclipseLink (JPA 2.1)
 libs.eclipselink.prop-maven-dependencies=\n                org.eclipse.persistence:eclipselink:2.5.1:jar\n            
 libs.eclipselinkmodelgen.classpath=\
+    ${base}/eclipselinkmodelgen/org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar;\
     ${base}/eclipselinkmodelgen/org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar
 libs.eclipselinkmodelgen.displayName=EclipseLink-ModelGen (JPA 2.1)
 libs.eclipselinkmodelgen.prop-maven-dependencies=org.eclipse.persistence:org.eclipse.persistence.jpa.modelgen.processor:2.5.1:jar
+libs.jpa20-persistence.classpath=\
+    ${base}/jpa20-persistence/javax.persistence_2.1.0.v201304241213.jar
+libs.jpa20-persistence.displayName=Persist\u00eancia (JPA 2.1)
+libs.jpa20-persistence.prop-maven-dependencies=org.eclipse.persistence:javax.persistence:2.1.0:jar
