--- a/fontes/Comercial/nbproject/project.properties
+++ b/fontes/Comercial/nbproject/project.properties
@@ -35,9 +35,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.eclipselink.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}:\
-    ${libs.jpa20-persistence.classpath}
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
