--- a/fontes/Comercial/nbproject/project.properties
+++ b/fontes/Comercial/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.jar=${dist.dir}/Comercial.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-io-2.4.jar=lib/apache-commons/commons-io-2.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
